--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
+	"id": "llm-commentary",
+	"name": "LLM Commentary",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"description": "You don't chat with it, it just comments on your notes.",
+	"author": "TehShrike",
+	"authorUrl": "https://github.com/TehShrike",
 	"isDesktopOnly": false
 }
