--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "llm-commentary",
 	"version": "1.2.0",
-	"description": "You don't chat with it, it just comments on your notes.",
+	"description": "A non-chat way to get LLM to respond in the sidebar to whatever you're writing.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
